--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,13 +1,21 @@
 version: "3.0"
 services:
-  boilerplate:
+  cassandradb:
     build:
       context: ../
       dockerfile: docker/Dockerfile
     environment:
-      MODULE_NAME: "boilerplate"
+      MODULE_NAME: "cassandradb"
       MODULE_TYPE: "Output"
       INGRESS_HOST: "0.0.0.0"
       INGRESS_PORT: "80"
+      HOST: "0.0.0.0"
+      PORT: "9042"
+      USERNAME: "(optional)"
+      PASSWORD: "(optional)"
+      KEYSPACE: "mykeyspace"
+      TABLE_NAME: "mytable"
+      COLUMNS: "temperature, location"
+      LABELS: "filterTemp, sensorLocation"
     ports:
       - 80:80
