--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
 # REQUIRED MODULE SETTINGS
 
-MODULE_NAME=boilerplate
+MODULE_NAME=cassandradb
 MODULE_TYPE=Output
 
 # REQUIRED API SETTINGS
@@ -10,3 +10,11 @@ INGRESS_HOST=0.0.0.0
 INGRESS_PORT=80
 
 # YOU CAN ADD REMAINING MODULE SETTINGS BELOW
+HOST=0.0.0.0
+PORT=9042
+USERNAME=
+PASSWORD=
+KEYSPACE=mykeyspace
+TABLE_NAME=mytable
+COLUMNS=temperature, location
+LABELS=filterTemp, sensorLocation
